--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" src="assets\styles\bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets\toastr\toastr.min.css" />
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
